compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_suggest_modules_with_public_value_1.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// Public value from another module should be suggested.\n\nimport module\npub fn main() {\n    one\n}"
---
----- SOURCE CODE
-- module.gleam

pub const one = 1

-- main.gleam

// Public value from another module should be suggested.

import module
pub fn main() {
    one
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:6:5
  │
6 │     one
  │     ^^^

The name `one` is not in scope here.
Did you mean one of these:

  - module.one
